--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore all IntelliJ/Android Studio project files…
-.idea/
+.idea/*
 # …but keep the shareable ones:
 !.idea/codeStyles/
 !.idea/inspectionProfiles/
@@ -13,6 +13,7 @@
 .idea/dictionaries
 .idea/shelf/
 
+# Build / tool outputs
 .cxx
 .DS_Store
 .externalNativeBuild
