--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -2,22 +2,15 @@ name: Android CI (API 35)
 
 on:
   push:
-    branches: [ '**' ]
-    tags-ignore: [ '**' ]   # skip tag pushes for regular jobs
+    branches: [ '**' ]     # run CI on any branch
+    tags: [ 'v*' ]         # also trigger a run when pushing tags like v1.2.3
   pull_request:
-  workflow_dispatch:
-    inputs:
-      build_release:
-        description: 'Build release APK'
-        type: choice
-        options: [ 'false','true' ]
-        default: 'false'
+  workflow_dispatch: { }  # optional manual runs (doesn't trigger release unless push to main/tag)
 
 concurrency:
   group: android-ci-${{ github.ref }}
   cancel-in-progress: true
 
-# Shared env
 env:
   GRADLE_USER_HOME: ${{ github.workspace }}/.gradle
   GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.jvmargs=-Xmx2g
@@ -31,11 +24,10 @@ jobs:
     name: spotlessCheck
     runs-on: ubuntu-latest
     container: eclipse-temurin:17-jdk
+    # skip this job on tag pushes
     if: ${{ github.ref_type != 'tag' }}
     steps:
       - uses: actions/checkout@v4
-
-      # Gradle action handles wrapper setup & caching
       - uses: gradle/actions/setup-gradle@v4
 
       - name: Prep gradlew
@@ -92,7 +84,6 @@ jobs:
         run: ./gradlew --stacktrace --no-daemon lintDebug
 
       - name: Collect lint reports
-        id: collect
         shell: bash
         run: |
           set -euxo pipefail
@@ -193,10 +184,8 @@ jobs:
     name: Package Release APK
     runs-on: ubuntu-latest
     container: ghcr.io/cirruslabs/android-sdk:35
-    # Run when:
-    # - manual dispatch input build_release == 'true' OR
-    # - repo/org Actions Variable BUILD_RELEASE == 'true'
-    if: ${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.build_release == 'true') || vars.BUILD_RELEASE == 'true' }}
+    # Run for pushes to main OR for tag pushes v*
+    if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')) }}
     steps:
       - uses: actions/checkout@v4
       - uses: gradle/actions/setup-gradle@v4
