--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -180,6 +180,61 @@ jobs:
             app/build/test-results/testDebugUnitTest/*.xml
             app/build/reports/tests/testDebugUnitTest/
 
+  android_instrumented_tests:
+    name: Instrumented Tests (API ${{ matrix.api }})
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    if: ${{ github.ref_type != 'tag' }}
+    strategy:
+      fail-fast: true
+      matrix:
+        api: [ 34, 35 ]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+
+      - uses: gradle/actions/setup-gradle@v4
+        with:
+          cache-overwrite-existing: true
+          gradle-home-cache-cleanup: true
+
+      # Enable KVM (hardware acceleration) on Ubuntu runner
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+          sudo modprobe kvm || true
+          sudo modprobe kvm_intel || sudo modprobe kvm_amd || true
+          ls -l /dev/kvm || true
+
+      - name: Run connectedDebugAndroidTest
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: ${{ matrix.api }}
+          arch: x86_64
+          target: google_apis
+          profile: pixel_6
+          emulator-options: -no-window -no-snapshot -no-boot-anim -gpu swiftshader_indirect -camera-back none -camera-front none
+          emulator-boot-timeout: 600
+          disable-animations: true
+          # change task if your module isn't :app
+          script: ./gradlew --stacktrace connectedDebugAndroidTest
+
+      - name: Upload instrumented test reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: instrumented-test-reports-api-${{ matrix.api }}
+          path: |
+            **/build/reports/androidTests/connected/**
+            **/build/outputs/androidTest-results/connected/**
+
   package_release:
     name: Package Release APK
     runs-on: ubuntu-latest
