--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     container: eclipse-temurin:17-jdk
     # skip this job on tag pushes
-    if: ${{ github.ref_type != 'tag' }}
+    if: ${{ (github.ref_type != 'tag') && (github.event_name != 'push' || github.event.created != true) }}
     steps:
       - uses: actions/checkout@v4
       - uses: gradle/actions/setup-gradle@v4
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     container: ghcr.io/cirruslabs/android-sdk:35
     timeout-minutes: 20
-    if: ${{ github.ref_type != 'tag' }}
+    if: ${{ (github.ref_type != 'tag') && (github.event_name != 'push' || github.event.created != true) }}
     steps:
       - uses: actions/checkout@v4
       - uses: gradle/actions/setup-gradle@v4
@@ -104,7 +104,7 @@ jobs:
     name: Build Debug APK
     runs-on: ubuntu-latest
     container: ghcr.io/cirruslabs/android-sdk:35
-    if: ${{ github.ref_type != 'tag' }}
+    if: ${{ (github.ref_type != 'tag') && (github.event_name != 'push' || github.event.created != true) }}
     steps:
       - uses: actions/checkout@v4
       - uses: gradle/actions/setup-gradle@v4
@@ -144,7 +144,7 @@ jobs:
     name: Unit Tests (debug)
     runs-on: ubuntu-latest
     container: ghcr.io/cirruslabs/android-sdk:35
-    if: ${{ github.ref_type != 'tag' }}
+    if: ${{ (github.ref_type != 'tag') && (github.event_name != 'push' || github.event.created != true) }}
     steps:
       - uses: actions/checkout@v4
       - uses: gradle/actions/setup-gradle@v4
@@ -184,7 +184,7 @@ jobs:
     name: Instrumented Tests (API ${{ matrix.api }})
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    if: ${{ github.ref_type != 'tag' }}
+    if: ${{ (github.ref_type != 'tag') && (github.event_name != 'push' || github.event.created != true) }}
     strategy:
       fail-fast: true
       matrix:
