Ansicht zum Anlegen neuer Ereignisse

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".MagnetActivity" />
         <activity android:name=".EreignisActivity" />
         <activity android:name=".MainGraphActivity" />
+        <activity android:name=".NewEreignisActivity" />
 
     </application>
 
