--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,11 +53,12 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.org.eclipse.paho.android.service
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-    implementation("org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5")
-    //implementation("org.eclipse.paho:org.eclipse.paho.android.service:1.1.1")
+    implementation libs.org.eclipse.paho.android.service
+    implementation libs.org.eclipse.paho.mqttv5.client
     implementation ("androidx.room:room-runtime:2.6.1")
     annotationProcessor ("androidx.room:room-compiler:2.6.1")
 }
