--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -6,6 +6,8 @@ on:
     tags: [ 'v*' ]         # also trigger a run when pushing tags like v1.2.3
   pull_request:
   workflow_dispatch: { }  # optional manual runs (doesn't trigger release unless push to main/tag)
+  release:
+    types: [ published ]
 
 concurrency:
   group: android-ci-${{ github.ref }}
@@ -283,3 +285,47 @@ jobs:
           path: |
             app/build/outputs/apk/release/*.apk
             app/build/outputs/mapping/release/
+
+  upload_debug_to_release:
+    name: Upload debug APK to Release
+    if: github.event_name == 'release'
+    runs-on: ubuntu-latest
+    container: ghcr.io/cirruslabs/android-sdk:35
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: gradle/actions/setup-gradle@v4
+
+      - name: Before Gradle (SDK wiring)
+        shell: bash
+        run: |
+          set -euxo pipefail
+          if grep -q $'\r' gradlew; then tr -d '\r' < gradlew > gradlew.new && mv gradlew.new gradlew; fi
+          chmod +x gradlew
+          SDK_DIR=""
+          for d in /opt/android-sdk /opt/android-sdk-linux /opt/android-sdk/current; do
+            [ -d "$d" ] && SDK_DIR="$d" && break
+          done
+          [ -n "$SDK_DIR" ] || (echo "Android SDK not found"; exit 1)
+          echo "sdk.dir=$SDK_DIR" > local.properties
+          echo "ANDROID_SDK_ROOT=$SDK_DIR" >> $GITHUB_ENV
+          echo "ANDROID_HOME=$SDK_DIR" >> $GITHUB_ENV
+
+      - name: Build Debug APK
+        run: ./gradlew --stacktrace --no-daemon clean assembleDebug
+
+      - name: Rename APK nicely
+        shell: bash
+        run: |
+          set -euxo pipefail
+          mkdir -p dist
+          # adjust path if your module isn't app
+          APK=$(ls -1 app/build/outputs/apk/debug/*.apk | head -n 1)
+          cp "$APK" "dist/${{ github.event.repository.name }}-${{ github.ref_name }}-debug.apk"
+
+      - name: Upload debug APK to GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            dist/*.apk
