--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".events.EreignisActivity" />
         <activity android:name=".graph.MainGraphActivity" />
         <activity android:name=".events.NewEreignisActivity" />
+        <activity android:name=".settings.SettingsActivity" />
 
     </application>
 
